# PowerMap

./: .clangd  .gitignore  1_EdgeOrientation_技术方案.md  2_VertexAlignment_技术方案.md  3_DynamicGrid_DVPositioning_技术方案.md  4_AuxLineSpacing_技术方案.md  BaR.bat  CMakeLists.txt  example_pointer_vs_reference.cpp  example_reference.cpp  local_map.txt  names.txt  test.cpp
docs/: bug_fix_edge_vertex_reference.md  bug_fix_reference_wrapper_issue.md  bug_fix_vertex_coordinate_mutation.md  optimization_overlap_check.md  quick_reference_spatial_grid.md  spatial_algorithms_comparison.md  spatial_grid_optimization_summary.md  terminology_update_summary.md
examples/: overlap_check_benchmark.cpp  spatial_grid_usage.cpp
include/: AuxLineSpacing.h  BaseEdgeProperty.h  BaseGraphProperty.h  BaseUGraphProperty.h  BaseVertexProperty.h  CheckOverlap.h  Commons.h  Coord2.h  DVPositioning.h  DynamicGrid.h  EdgeOrientation.h  MapFileReader.h  PowerMap.h  SpatialGrid.h  Types.h  VertexAlignment.h  VisualizeSVG.h
input/: test0.txt  test10.txt  test14.txt  test19.txt  test20.txt  test21.txt  test28.txt  test3.txt  test30.txt  test35.txt  test37.txt  test38.txt  test39.txt  test4.txt  test41.txt  test51.txt  test53.txt  test54.txt  test59.txt  test63.txt  test67.txt  test69.txt  test7.txt  test70.txt  test72.txt  test75.txt  test8.txt  test81.txt  test82.txt  test84.txt  test86.txt  test9.txt  test94.txt  test95.txt  test98.txt  test_12.txt  test_17.txt  test_2.txt  test_22.txt  test_23.txt  (+16 more)
output/: .gitkeep
src/: AuxLineSpacing.cpp  BaseEdgeProperty.cpp  BaseGraphProperty.cpp  BaseUGraphProperty.cpp  BaseVertexProperty.cpp  CheckOverlap.cpp  Commons.cpp  Coord2.cpp  DVPositioning.cpp  DynamicGrid.cpp  EdgeOrientation.cpp  MapFileReader.cpp  PowerMap.cpp  RelativeCoord.cpp  SpatialGrid.cpp  Test.cpp  VertexAlignment.cpp  VisualizeSVG.cpp  backup.cpp  backupEdgeOrientation.cpp  main.cpp
